Refactored to utilize _.template() and added Make Cover feature.

--- a/css/_album-view.scss
+++ b/css/_album-view.scss
@@ -11,6 +11,10 @@
         color: $gold;
       }
     }
+    h3 {
+      margin-left: 12px;
+      display: inline-block;
+    }
   }
   .container ul {
     width: 100%;
@@ -25,45 +29,52 @@
   .fa-plus-square {
     font-size: 32px;
   }
+  h1, h2, h3 {
+    margin: 0;
+  }
+  h2 {
+    font-size: 22px;
+    font-style: italic;
+    margin-right: 1px;
+  }
+  h3 {
+    font-size: 16px;
+    font-style: italic;
+  }
 }
+
 form {
   text-align: right;
   padding-right: 2%;
   margin-bottom: 2%;
   display: none;
+  .new-photo {
+    display: inline-block;
+    margin-left: 1%;
+  }
+  input {
+    width: 200px;
+    padding: 4px;
+    font-size: 14px;
+  }
+  input[type=checkbox] {
+    width: 17px;
+  }
+  label {
+    font-size: 16px;
+  }
+  button {
+    font-size: 14px;
+    padding: 5px;
+  }
 }
-.new-photo {
-  display: inline-block;
-  margin-left: 1%;
-}
-input {
-  width: 200px;
-  padding: 4px;
-  font-size: 14px;
-}
-button {
-  font-size: 14px;
-  padding: 5px;
-}
+
 .photo-box {
   @extend .album-box;
   margin-bottom: 5%;
   width: 588px;
-  height: 300px;
+  height: 400px;
   .photo-div {
     @extend .album-div;
   }
-}
-
-h2, h3 {
-  margin: 0;
-}
-
-h2 {
-  font-size: 22px;
-}
-
-h3 {
-  font-size: 16px;
-  font-style: italic;
 }
