--- a/css/_top-view.scss
+++ b/css/_top-view.scss
@@ -16,11 +16,6 @@
     color: black;
     font-size: 48px;
   }
-  h1 {
-    color: black;
-    font-size: 53px;
-    margin: 10px;
-  }
 }
 
 .album-box {
@@ -40,10 +35,14 @@
     color: white;
     opacity: 0;
     position: absolute;
-    right: 0%;
-    top: 69%;
+    right: -1px;
+    bottom: 12%;
     text-align: right;
     transition: all .5s ease-in-out;
+  }
+  h1 {
+    color: white;
+    margin: 0;
   }
   &:hover {
     .tint {
