--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,14 @@ nav {
   width: 100%;
   background-color: rgba(255, 255, 255, 0.9);
   z-index: 100; }
+  nav li {
+    display: inline-block; }
+  nav h1, nav h2, nav h3 {
+    display: inline-block; }
+
+h1 {
+  font-size: 53px;
+  margin: 10px; }
 
 ul {
   list-style-type: none;
@@ -60,11 +68,6 @@ section {
   color: black;
   font-size: 48px; }
 
-.top-view h1 {
-  color: black;
-  font-size: 53px;
-  margin: 10px; }
-
 .album-box, .photo-box {
   margin-bottom: 6%;
   width: 385px;
@@ -81,10 +84,13 @@ section {
     color: white;
     opacity: 0;
     position: absolute;
-    right: 0%;
-    top: 69%;
+    right: -1px;
+    bottom: 12%;
     text-align: right;
     transition: all .5s ease-in-out; }
+  .album-box h1, .photo-box h1 {
+    color: white;
+    margin: 0; }
   .album-box:hover .tint, .photo-box:hover .tint {
     opacity: .5; }
   .album-box:hover .thumb-caption, .photo-box:hover .thumb-caption {
@@ -99,6 +105,9 @@ section {
     padding: 1.6% 2%; }
     .album-view nav li:hover {
       color: #C5B358; }
+  .album-view nav h3 {
+    margin-left: 12px;
+    display: inline-block; }
 
 .album-view .container ul {
   width: 100%;
@@ -113,39 +122,42 @@ section {
 .album-view .fa-plus-square {
   font-size: 32px; }
 
+.album-view h1, .album-view h2, .album-view h3 {
+  margin: 0; }
+
+.album-view h2 {
+  font-size: 22px;
+  font-style: italic;
+  margin-right: 1px; }
+
+.album-view h3 {
+  font-size: 16px;
+  font-style: italic; }
+
 form {
   text-align: right;
   padding-right: 2%;
   margin-bottom: 2%;
   display: none; }
-
-.new-photo {
-  display: inline-block;
-  margin-left: 1%; }
-
-input {
-  width: 200px;
-  padding: 4px;
-  font-size: 14px; }
-
-button {
-  font-size: 14px;
-  padding: 5px; }
+  form .new-photo {
+    display: inline-block;
+    margin-left: 1%; }
+  form input {
+    width: 200px;
+    padding: 4px;
+    font-size: 14px; }
+  form input[type=checkbox] {
+    width: 17px; }
+  form label {
+    font-size: 16px; }
+  form button {
+    font-size: 14px;
+    padding: 5px; }
 
 .photo-box {
   margin-bottom: 5%;
   width: 588px;
-  height: 300px; }
-
-h2, h3 {
-  margin: 0; }
-
-h2 {
-  font-size: 22px; }
-
-h3 {
-  font-size: 16px;
-  font-style: italic; }
+  height: 400px; }
 
 .photo-view {
   min-height: 706px;
@@ -161,21 +173,25 @@ h3 {
   .photo-view ul {
     margin: 0;
     display: inline-block;
-    width: 50%;
-    padding: 1.8% 2%; }
+    width: 100%;
+    padding: 0.8% 2%; }
   .photo-view li {
     display: inline-block;
     margin-right: 2%; }
   .photo-view .fa {
-    font-size: 48px; }
+    font-size: 48px;
+    vertical-align: middle; }
+  .photo-view .fa-check-square {
+    font-size: 32px; }
+  .photo-view h3 {
+    margin-left: 12px;
+    font-style: italic; }
   .photo-view a {
     color: white;
     opacity: .4; }
     .photo-view a:hover {
       opacity: .7; }
   .photo-view .photo-info {
-    width: 40%;
-    text-align: right;
     color: white;
     opacity: .4; }
     .photo-view .photo-info:hover {
