--- a/css/styles.scss
+++ b/css/styles.scss
@@ -15,6 +15,17 @@ nav {
   width: 100%;
   background-color: $whiteTrans;
   z-index: 100;
+  li {
+    display: inline-block;
+  }
+  h1, h2, h3 {
+    display: inline-block;
+  }
+}
+
+h1 {
+  font-size: 53px;
+  margin: 10px;
 }
 
 ul {
