--- a/css/_album-view.scss
+++ b/css/_album-view.scss
@@ -16,11 +16,16 @@
       display: inline-block;
     }
   }
-  .container ul {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  .container {
+    ul {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+    a {
+      width: 49%;
+    }
   }
   .fa {
     font-size: 48px;
@@ -71,8 +76,8 @@ form {
 
 .photo-box {
   @extend .album-box;
-  margin-bottom: 5%;
-  width: 588px;
+  margin-bottom: 4%;
+  width: 100%;
   height: 400px;
   .photo-div {
     @extend .album-div;
