--- a/css/_top-view.scss
+++ b/css/_top-view.scss
@@ -2,12 +2,17 @@
   nav ul {
       padding-left: 2%;
   }
-  .container ul {
-    padding: 0;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  .container {
+    ul {
+      padding: 0;
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+    a {
+      width: 32%;
+    }
   }
   li {
     display: inline-block;
@@ -20,7 +25,7 @@
 
 .album-box {
   margin-bottom: 6%;
-  width: 385px;
+  width: 100%;
   height: 300px;
   position: relative;
   transition: all .5s ease-in-out;
