--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,9 @@ section {
   flex-wrap: wrap;
   justify-content: space-between; }
 
+.top-view .container a {
+  width: 32%; }
+
 .top-view li {
   display: inline-block; }
 
@@ -70,7 +73,7 @@ section {
 
 .album-box, .photo-box {
   margin-bottom: 6%;
-  width: 385px;
+  width: 100%;
   height: 300px;
   position: relative;
   transition: all .5s ease-in-out; }
@@ -115,6 +118,9 @@ section {
   flex-wrap: wrap;
   justify-content: space-between; }
 
+.album-view .container a {
+  width: 49%; }
+
 .album-view .fa {
   font-size: 48px;
   vertical-align: middle; }
@@ -155,8 +161,8 @@ form {
     padding: 5px; }
 
 .photo-box {
-  margin-bottom: 5%;
-  width: 588px;
+  margin-bottom: 4%;
+  width: 100%;
   height: 400px; }
 
 .photo-view {
